--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "npx tsc && node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "doc": "npx typedoc"
   },
   "repository": {
     "type": "git",
@@ -20,12 +21,14 @@
   "homepage": "https://github.com/bscuron/bucketlist-backend#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "prettier": "^2.8.4"
   }
 }
