--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/bscuron/bucketlist-backend#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/mysql": "^2.15.21",
+    "@types/node": "^18.14.6",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
   },
