--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "hash-generator": "^0.1.0",
     "mysql": "^2.18.1",
     "prettier": "^2.8.4"
   }
