--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bscuron/bucketlist-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/mysql": "^2.15.21",
     "@types/node": "^18.14.6",
@@ -31,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "hash-generator": "^0.1.0",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
