--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/mysql": "^2.15.21",
+    "@types/knex": "^0.16.1",
     "@types/node": "^18.14.6",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
@@ -35,7 +35,8 @@
     "express-jwt": "^8.4.1",
     "hash-generator": "^0.1.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
+    "knex": "^2.4.2",
+    "mysql2": "^3.2.0",
     "prettier": "^2.8.4"
   }
 }
