--- a/package.json
+++ b/package.json
@@ -24,19 +24,22 @@
     "@types/express": "^4.17.17",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.14.6",
+    "@types/speakeasy": "^2.0.7",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/qrcode": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
-    "hash-generator": "^0.1.0",
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "qrcode": "^1.5.1",
+    "speakeasy": "^2.0.0"
   }
 }
