--- a/package.json
+++ b/package.json
@@ -20,11 +20,17 @@
   },
   "homepage": "https://github.com/bscuron/bucketlist-backend#readme",
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-typescript": "^7.21.4",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.14.6",
     "@types/speakeasy": "^2.0.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
     "typedoc": "^0.24.0-beta.2",
     "typescript": "^4.9.5"
   },
