--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npx tsc && node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "doc": "npx typedoc"
+    "doc": "npx typedoc",
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
