--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx tsc && node dist/index.js",
+    "start": "npx tsc && node dist/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "doc": "npx typedoc",
     "test": "jest --detectOpenHandles"
