--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^29.5.0",
     "@types/knex": "^0.16.1",
     "@types/node": "^18.14.6",
+    "@types/nodemailer": "^6.4.7",
     "@types/speakeasy": "^2.0.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
@@ -45,6 +46,7 @@
     "jsonwebtoken": "^9.0.0",
     "knex": "^2.4.2",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.1",
     "prettier": "^2.8.4",
     "qrcode": "^1.5.1",
     "speakeasy": "^2.0.0"
